--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "continuation-local-storage": "^3.2.1",
     "express-gateway": "^1.11.0",
-    "express-gateway-plugin-customlogger": "file:express-gateway-plugin-customlogger"
+    "express-gateway-plugin-customlogger": "file:express-gateway-plugin-customlogger",
+    "express-gateway-plugin-jwt": "github:renatoramiro/express-gateway-plugin-jwt"
   },
   "scripts": {
     "start": "node server.js",
